Fix a bug with poly params